--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "slimpay/hapiclient",
+    "name": "ohmEnergySlimpay/hapiclient",
     "description": "An HTTP Client using HAL as the format for resources.",
     "keywords": ["http", "hal", "rest", "client", "HTTP client", "HAL client", "hapi", "hateoas"],
     "license": "MIT",
